Fix wrapping the result

--- a/regex-generator-web/src/main/resources/regex-generator.css
+++ b/regex-generator-web/src/main/resources/regex-generator.css
@@ -122,5 +122,5 @@ form * .rg-check-row {
 }
 
 #rg_result_display {
-  white-space: pre;
+  white-space: pre-wrap;
 }
